# MusicGrabber

./: .env_example  .gitignore  Dockerfile  README.md  bash.sh  db.py  main.py  pyproject.toml  reboot.sh  start.sh  userinfo.db
app/: main.py
app/common/: settings.py
app/constant/: music.py  start.py
app/handlers/: music.py  search.py  start.py
docker_compose/: app.yaml
